--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Acoustical Assessment of Voice Disorder with Continuous Speech Using ASR Posterior Features</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p>
+<!--
+<EMBED src='C:\Users\Sophia_Liou\Documents\GitHub\Sophia-Liou.github.io\C017_edited.wav' width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
+-->
 </body>
 </html>
