--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>Acoustical Assessment of Voice Disorder with Continuous Speech Using ASR Posterior Features</h1>
 <p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p>
-<!--
-<EMBED src='C:\Users\Sophia_Liou\Documents\GitHub\Sophia-Liou.github.io\C017_edited.wav' width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
--->
+
+<EMBED src='https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017 width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
+
 </body>
 </html>
