--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <h1>Acoustical Assessment of Voice Disorder with Continuous Speech Using ASR Posterior Features</h1>
 <p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p>
 
-<EMBED src='https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017 width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
+<p>severe disordered voice from a female speaker</p>
+<EMBED src=https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017 width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
+<p>normal voice from a female speaker</p>
+<EMBED src=https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
 
 </body>
 </html>
