--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <h1>Acoustical Assessment of Voice Disorder with Continuous Speech Using ASR Posterior Features</h1>
 <p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p><br>
 
+<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-a-male-speaker">normal voice from a female speaker</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-a-male-speaker">severe disordered voice from a male speaker</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 ">normal voice from a female speaker</a><br>
 <a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017">severe disordered voice from a female speaker</a><br>
-<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 ">normal voice from a female speaker</a>
+
 <!--
 <p>severe disordered voice from a female speaker (https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017)</p>
 <EMBED src="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017" width=300 height=45 type=audio/wav loop="false" autostart="false" volume="0"></EMBED>
