--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 <h1>Acoustical Assessment of Voice Disorder with Continuous Speech Using ASR Posterior Features</h1>
-<p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p><br>
+<p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p><br><br>
 
+<p>Audio samples in CanPEV</p><br>
 <a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-a-male-speaker">normal voice from a male speaker</a><br>
 <a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-a-male-speaker">severe disordered voice from a male speaker</a><br>
 <a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 ">normal voice from a female speaker</a><br>
