--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <p>Yuanyuan Liu, Tan Lee, Thomas Law, Kathy Yuet-Sheung Lee</p><br>
 
 <p>Audio samples in CanPEV</p>
-<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-a-male-speaker">normal voice from a male speaker</a><br>
-<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-a-male-speaker">severe disordered voice from a male speaker</a><br>
-<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 ">normal voice from a female speaker</a><br>
-<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017">severe disordered voice from a female speaker</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-a-male-speaker">normal voice from a male speaker (C006m)</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-a-male-speaker">severe disordered voice from a male speaker (C086m)</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-a-male-speaker-c163">severe disordered voice from a male speaker (C163m)</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/normal-voice-from-female-speaker-c121 ">normal voice from a female speaker (C121f)</a><br>
+<a href="https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017">severe disordered voice from a female speaker (C017f)</a><br>
 
 <!--
 <p>severe disordered voice from a female speaker (https://soundcloud.com/xoecfwjtv5yr/severe-disordered-voice-from-female-speaker-c017)</p>
